handlers and keyboards refactored

--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.telegram</groupId>
 			<artifactId>telegrambots-spring-boot-starter</artifactId>
 			<version>5.2.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.telegram</groupId>
 			<artifactId>telegrambotsextensions</artifactId>
@@ -51,6 +58,12 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.20</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.25</version>
 		</dependency>
 	</dependencies>
 
@@ -66,7 +79,7 @@
 				<version>3.0.3</version>
 				<configuration>
 					<jdkVersion>11</jdkVersion>
-					<appName>mds-file-storage-telegram-bot</appName>
+					<appName>mds-info-storage-telegram-bot</appName>
 					<processTypes>
 						<worker>
 							java $JAVA_OPTS -cp target/classes:target/dependency/* ru.muryginds.infoStorage.BotApplication
