--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL:mysql://localhost:3308/mybot_db}
+spring.datasource.username=commonUser
+spring.datasource.password=commonUser
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.show_sql=true
+server.port=${PORT:8080}
